Server side setup

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "developers-blog",
   "version": "1.0.0",
   "description": "Blog for Developers to share ideas",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js"
+    "start": "node server/index.js"
   },
   "author": "Paramveer Soundane",
   "license": "ISC",
