--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "jade": "^1.11.0",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0"
